add /airQuality/TH/{THprovince}
- refactor
- fixed bugs
